syntax = "proto3";
package stream;

import "github.com/kralicky/totem/extensions.proto";
import "github.com/kralicky/totem/totem.proto";
import "github.com/open-panoptes/opni/pkg/apis/core/v1/core.proto";
import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";
import "google/rpc/status.proto";

option go_package = "github.com/open-panoptes/opni/pkg/apis/stream/v1";

service Stream {
  rpc Connect(stream totem.RPC) returns (stream totem.RPC);

  // Used for implementation-specific events. No guarantees are made about
  // whether events will be sent or when.
  rpc Notify(StreamEvent) returns (google.protobuf.Empty);
}

enum EventType {
  Unknown           = 0;
  DiscoveryComplete = 1;
}

message StreamEvent {
  EventType type          = 1;
  string    correlationId = 2;
}

service Delegate {
  option (totem.visibility) = {
    splicedClients: true
  };

  // A synchronous request-response RPC sent to a single client.
  rpc Request(DelegatedMessage) returns (totem.RPC);

  // A best-effort broadcast sent to all connected clients, with an
  // optional target filter.
  rpc Broadcast(BroadcastMessage) returns (BroadcastReplyList);
}

message DelegatedMessage {
  totem.RPC      request = 1;
  core.Reference target  = 2;
}

message DelegatedMessageReply {
  totem.RPC         reply  = 1;
  google.rpc.Status status = 2;
}

message BroadcastMessage {
  totem.RPC            request        = 1;
  core.ClusterSelector targetSelector = 2;
}

message BroadcastReplyList {
  repeated BroadcastReply responses = 1;
}

message BroadcastReply {
  core.Reference ref   = 1;
  totem.RPC      reply = 2;
}
